@@ -12,6 +12,7 @@ Engine changes
 * Add a -lag option to simulate slower systems for debugging.
 * Print when the main loop starts and stops.
 * Print the Lua version at startup (#692).
+* Outputs are now prefixed by [Solarus] and the current simulated time.
 * Maps: allow more than 3 layers (#445).
 * Improve the performance of custom entity collisions.
 * Improve the performance of collisions by using a quadtree.
